# solana-crawler

./: .gitignore  LICENSE.txt  README.md  install.sh  pyproject.toml
scripts/: crawler.sh
solana_crawler/: api.py  crawler.py  data.py
solana_crawler/ui/: graph.js
solana_crawler/ui/static/: style.css
solana_crawler/ui/templates/: index.html
